# rudelblinken

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Makefile  README.md  basic-firefly.toit  communication.toit  firefly.toit  flake.nix  flash-all.sh  logo.py  main.toit  package.yaml  parts  rust-toolchain.toml  sdkconfig.defaults  sync.toit  upgrade.toit  ws2812.toit
rudelblinken-bindgen/: Cargo.toml  README.md
rudelblinken-bindgen/docs/adr/: 0001-parser-and-generator-types-are-separate.md  0002-pure-rust-parser-over-libclang.md  0003-restricted-canonical-c-subset.md  0004-rust-backend-uses-syn-ast.md  0005-standalone-cli-pregenerated-bindings.md  0006-diagnostic-pipeline-spans-and-ariadne.md  0007-bindgen-is-a-cli-and-an-embeddable-library.md  0008-backend-logic-lives-in-backend-modules.md
rudelblinken-bindgen/reference/: rudel-guest.witx  rudel.witx
rudelblinken-bindgen/src/: generator.rs  lib.rs  main.rs  parser.rs
rudelblinken-bindgen/src/generator/: backends.rs  c_guest.rs  lowering.rs  rust_guest.rs  validation.rs
rudelblinken-bindgen/src/generator/backends/: c_guest.rs  rust_guest.rs
rudelblinken-bindgen/src/parser/: attributes.rs  common.rs  grammar.rs  model.rs
rudelblinken-bindgen/tests/: README.md  compile_integration.rs  integration.rs
rudelblinken-bindgen/tests/cases/directives_and_enums/: input.c
rudelblinken-bindgen/tests/cases/duplicate_linkage_attribute/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/exported_function/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/imported_and_exported_function/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/imported_function/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/rudel_header_success/: input.c
rudelblinken-bindgen/tests/cases/syntax_error_missing_brace/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/syntax_error_missing_closing_paren/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/syntax_error_missing_enum_name/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/syntax_error_missing_field_name/: output_c_guest.c
rudelblinken-bindgen/tests/cases/syntax_error_missing_struct_name/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/syntax_error_unknown_attribute/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/cases/variable_linkage_attribute/: input.c  output_c_guest.c
rudelblinken-bindgen/tests/compile_cases/: .gitignore
rudelblinken-bindgen/tests/compile_cases/c23_export_name/: bindgen_input.c  guest_impl.c
rudelblinken-bindgen/tests/compile_cases/log_and_main/: bindgen_input.c  guest_impl.c
rudelblinken-cli/: Cargo.toml  README.md
rudelblinken-cli/src/: emulator.rs  main.rs  update_target.rs
rudelblinken-cli/src/emulator/: emulated_host.rs
rudelblinken-filesystem/: Cargo.toml  README.md
rudelblinken-filesystem/src/: file.rs  file_content.rs  file_information.rs  file_metadata.rs  file_writer.rs  lib.rs  storage.rs
rudelblinken-filesystem/src/storage/: esp.rs  simulated.rs
rudelblinken-firmware/: Cargo.toml  build.rs  espflash.toml  partition_table.csv  sdkconfig.defaults
rudelblinken-firmware/.cargo/: config.toml
rudelblinken-firmware/src/: ble_abstraction.rs  boot_config_service.rs  cat_management_service.rs  config.rs  file_upload_service.rs  main.rs  name.rs  nrf_logging_service.rs  persistent_storage.rs  serial_logging_service.rs  service_helpers.rs  storage.rs  telid_logging_service.rs  wasm_service.rs  wasmi-example.rs
rudelblinken-firmware/src/ble_abstraction/: nimble copy.rs  nimble.rs
rudelblinken-firmware/src/cat_management_service/: device_name.rs  get_device_name.rs  main_program.rs
rudelblinken-firmware/src/cat_management_service/main_program/: load_main_program.rs
rudelblinken-firmware/src/config/: device_name.rs  main_program.rs
rudelblinken-firmware/src/file_upload_service/: incomplete_file.rs  low_level.rs  upload_request.rs
rudelblinken-firmware/src/wasm_service/: wasm_host.rs
rudelblinken-runtime/: Cargo.toml  README.md
rudelblinken-runtime/src/: emulated_host.rs  host.rs  lib.rs  linker.rs  main.rs
rudelblinken-runtime/src/linker/: glue.rs  linker.rs
rudelblinken-sdk/: .gitignore  Cargo.toml  README.md  bindgen.sh  rudel.wit
rudelblinken-sdk-macro/: Cargo.toml  README.md
rudelblinken-sdk-macro/src/: lib.rs
rudelblinken-sdk-macro/tests/: simple_test.rs  tests.rs
rudelblinken-sdk/src/: common.rs  guest.rs  host.rs  lib.rs  rudel.rs
rudelblinken-wasm/: Cargo.toml  README.md  build.sh  rudel.wit
rudelblinken-wasm/.cargo/: config.toml
rudelblinken-wasm/src/: lib.rs
rudelctl/: Cargo.toml  README.md  build.rs  update-firmware.sh
rudelctl/firmware/: default_program.wasm  partition_table.csv
rudelctl/src/: bluetooth.rs  emulator.rs  file_upload_client.rs  flash.rs  main.rs  update_target.rs
rudelctl/src/emulator/: emulated_host.rs
rudelctl/src/file_upload_client/: helpers.rs
rudelctl/src/update_target/: upload_request.rs
wasm-binaries/: Cargo.toml  README.md  build.sh  create.sh
wasm-binaries/.cargo/: config.toml
wasm-binaries/binaries/: blink.wasm  board_test.wasm  hello_world.wasm  infinite_loop.wasm  infinite_loop_yielding.wasm  printing_alpha.wasm  printing_beta.wasm  reference_sync_v1.wasm  rudelblinken_wasm.wasm  test_logging.wasm
wasm-binaries/blink/: Cargo.toml
wasm-binaries/blink/src/: lib.rs
wasm-binaries/board-test/: Cargo.toml
wasm-binaries/board-test/src/: lib.rs
wasm-binaries/hello-world/: Cargo.toml
wasm-binaries/hello-world/src/: lib.rs
wasm-binaries/infinite-loop/: Cargo.toml
wasm-binaries/infinite-loop-yielding/: Cargo.toml
wasm-binaries/infinite-loop-yielding/src/: lib.rs
wasm-binaries/infinite-loop/src/: lib.rs
wasm-binaries/printing-alpha/: Cargo.toml
wasm-binaries/printing-alpha/src/: lib.rs
wasm-binaries/printing-beta/: Cargo.toml
wasm-binaries/printing-beta/src/: lib.rs
wasm-binaries/reference-sync-v1/: Cargo.toml
wasm-binaries/reference-sync-v1/src/: lib.rs
wasm-binaries/test-logging/: Cargo.toml
wasm-binaries/test-logging/src/: lib.rs
(+30 files in other folders)
