[package]
name = "rudelblinken-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.1.1"
bluer = { version = "0.17.3", features = ["full"] }
btleplug = "0.11.6"
crc = "3.2.1"
env_logger = "0.11.5"
futures = "0.3.31"
rand = "0.8.5"
sha3 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }
uuid = "1.10.0"
