[package]
name = "rudelblinken-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rudel"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
blake3 = "1.5.4"
bluer = { version = "0.17.3", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
crc = "3.2.1"
env_logger = "0.11.5"
futures = "0.3.31"
futures-time = "3.0.0"
rand = "0.8.5"
sha3 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }
uuid = "1.10.0"
