[package]
name = "rudelblinken-filesystem"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["filesystem", "esp32", "flash"]
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
categories = ["filesystem", "embedded"]
repository = "https://github.com/zebreus/rudelblinken-rs"
homepage = "https://github.com/zebreus/rudelblinken-rs/tree/main/rudelblinken-filesystem"
description = "Minimalistic zero-copy flash filesystem optimized for embedded systemse"

[dependencies]
thiserror = "2.0.3"
zerocopy = { version = "0.8.10", features = ["derive"] }

[features]
default = []
simulated = []
esp32 = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
