[package]
name = "rudelblinken-filesystem"
version = "0.0.3"
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["filesystem", "esp32", "flash"]
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
categories = ["filesystem", "embedded"]
repository = "https://github.com/zebreus/rudelblinken-rs"
homepage = "https://github.com/zebreus/rudelblinken-rs/tree/main/rudelblinken-filesystem"
description = "Minimalistic zero-copy flash filesystem optimized for embedded systemse"

[dependencies]
thiserror = "2.0.3"
zerocopy = { version = "0.8.10", features = ["derive"] }
esp-idf-sys = { version = "0.35.0", optional = true }
esp-idf-hal = { version = "0.44.1", optional = true }
esp-idf-svc = { version = "0.49", default-features = false, optional = true }

[features]
default = ["simulated"]
simulated = []
esp = ["dep:esp-idf-sys", "dep:esp-idf-hal", "dep:esp-idf-svc"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
