cargo-features = ["per-package-target"]

[package]
name = "rudelblinken-firmware"
version = "0.1.0"
authors = ["Leon Marcy Vack <dev@lgcl.de>", "Zebreus <zebreus@zebre.us>"]
edition = "2021"
rust-version = "1.82"
forced-target = "riscv32imc-esp-espidf"

[[bin]]
name = "rudelblinken-firmware"
harness = false                # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
# wasmi = { version = "0.39.1", path = "../../wasmi/crates/wasmi" }
wasmi = { version = "0.39.1" }
anyhow = "1.0.89"
wat = "1.219.1"
esp32-nimble = "=0.8.0"
esp-idf-sys = "0.35.0"
esp-idf-hal = "0.44.1"
itertools = "0.13.0"
crc = "3.2.1"
thiserror = "1.0.64"
rudelblinken-sdk = { path = "../rudelblinken-sdk", features = ["host"] }
rudelblinken-filesystem = { path = "../rudelblinken-filesystem" }
blake3 = "1.5.4"
tracing-subscriber = "0.3.18"
tracing = "0.1.41"

[build-dependencies]
embuild = "0.32.0"
