    cargo-features = ["per-package-target"]

[package]
name = "rudelblinken-firmware"
version = "0.1.0"
authors = ["Leonie Marcy Vack <dev@lgcl.de>", "Zebreus <zebreus@zebre.us>"]
edition = "2021"
rust-version = "1.82"
forced-target = "riscv32imc-esp-espidf"

[[bin]]
name = "rudelblinken-firmware"
harness = false                # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
#    "esp-idf-svc/embassy-time-driver",
]

[profile.release]
opt-level = "s"
# lto = "fat"
lto = false
panic = "abort"

[profile.dev]
debug = true
opt-level = "z"
panic = "abort"

[dependencies]
# wasmi = { version = "0.39.1", path = "../../wasmi/crates/wasmi" }
wasmi = { version = "0.51.1" }
esp32-nimble = "=0.11.1"
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-sys = "0.36.0"
esp-idf-hal = "0.45.2"
anyhow = "1.0.100"
wat = "1.239.0"
itertools = "0.14.0"
crc = "3.3.0"
thiserror = "2.0.17"
rudelblinken-runtime = { path = "../rudelblinken-runtime" }
rudelblinken-filesystem = { path = "../rudelblinken-filesystem" }
blake3 = "1.8.2"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
zerocopy = { version = "0.8.27", features = ["derive"] }

[build-dependencies]
embuild = {version = "0.32.0", features = ["espidf"] }
