[package]
name = "rudelblinken-runtime"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Host implementation of the rudelblinken wasm runtime"
repository = "https://github.com/zebreus/rudelblinken-rs"
readme = "README.md"
categories = ["wasm", "embedded"]
keywords = ["rudelblinken", "wasm"]

[dependencies]
wasmi = "0.51.1"
