[package]
name = "rudelblinken-sdk"
version = "0.1.0"
edition = "2021"

[features]
host = ["dep:wasmi" ]
guest = []

[dependencies]
rkyv = "0.8.8"
talc = "4.4.2"
thiserror = "1.0.64"
tracing = "0.1.40"

wasmi = { version = "0.39.1", optional = true }
# wasmi = { version = "0.39.1", path = "../../wasmi/crates/wasmi", optional = true }
