[package]
name = "rudelblinken-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
rkyv = "0.8.8"
rudelblinken-sdk = { path = "../rudelblinken-sdk", features = ["guest"] }