[package]
name = "rudelblinken-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "rudelblinken-wasm"
path = "src/lib.rs"
harness = false

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = "z"

[dependencies]
rkyv = "0.8.8"
rudelblinken-sdk = { path = "../rudelblinken-sdk" }
spin = "0.9.8"
talc = "4.4.2"
