[workspace]
resolver = "2"
members = [
    "hello-world",
    "board-test",
    "reference-sync-v1",
    "blink",
    "printing-beta",
    "printing-alpha",
    "infinite-loop",
    "infinite-loop-yielding",
    "test-logging",
]

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = "z"

[workspace.dependencies]
rudelblinken-sdk = { path = "../rudelblinken-sdk" }
rudelblinken-sdk-macro = { path = "../rudelblinken-sdk-macro" }
spin = "0.10.0"
talc = "4.4.3"
